--- a/project.json
+++ b/project.json
@@ -6,6 +6,7 @@
     "UiPath.Excel.Activities": "[2.11.4]",
     "UiPath.IntelligentOCR.Activities": "[5.0.2]",
     "UiPath.Mail.Activities": "[1.12.2]",
+    "UiPath.OmniPage.Activities": "[1.8.0]",
     "UiPath.System.Activities": "[21.10.2]",
     "UiPath.UIAutomation.Activities": "[21.10.3]"
   },
