--- a/project.json
+++ b/project.json
@@ -3,9 +3,11 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.DocumentUnderstanding.ML.Activities": "[1.9.1]",
     "UiPath.Excel.Activities": "[2.11.4]",
     "UiPath.IntelligentOCR.Activities": "[5.0.2]",
     "UiPath.Mail.Activities": "[1.12.2]",
+    "UiPath.MLServices.Activities": "[1.2.0]",
     "UiPath.OmniPage.Activities": "[1.8.0]",
     "UiPath.System.Activities": "[21.10.2]",
     "UiPath.UIAutomation.Activities": "[21.10.3]"
